@@ -191,6 +191,8 @@
   <string id="31954">XBMC</string>
   <string id="31955">Installed</string>
   <string id="31956">Streaming Media</string>
+  <string id="31957">NB! No Favourites Found</string>
+  <string id="31958">User</string>
   
   <!-- strings 31000 thru 31999 reserved for skins -->
   </strings>
